--- a/mapsyncerlib/build.gradle
+++ b/mapsyncerlib/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile project(':maplib')
 }
