--- a/maplib/build.gradle
+++ b/maplib/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.library'
 
+ext {
+    PUBLISH_GROUP_ID='br.com.simplepass'
+    PUBLISH_ARTIFACT_ID='tracking-points-map'
+    PUBLISH_VERSION='0.8.0'
+}
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -8,7 +14,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
-        versionName "1.0"
+        versionName "0.8"
     }
     buildTypes {
         release {
@@ -28,3 +34,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
 }
+
+apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
