--- a/mapsyncerlib/build.gradle
+++ b/mapsyncerlib/build.gradle
@@ -32,5 +32,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile project(':maplib')
+    compile 'br.com.simplepass:tracking-points-map:0.8.0'
 }
