--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'br.com.simplepass:tracking-points-map:0.8.0'
+    //compile 'br.com.simplepass:tracking-points-map:0.8.0'
     //compile project(':maplib')
     compile project(':mapsyncerlib')
 }
