--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ android:
   - build-tools-24.0.1
   - android-24
   - extra-android-m2repository
+  - extra-google-m2repository
+  - extra-android-support
+  - extra-google-google_play_services
 script:
 - ./gradlew -PbintrayUser="${bintrayUser}" -PbintrayKey="${bintrayKey}" build bintrayUpload --stacktrace --info
 env:
