fixing Javadoc issue

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ allprojects {
         jcenter()
         mavenCentral()
     }
+
+    subprojects {
+        tasks.withType(Javadoc).all { enabled = false }
+    }
 }
 
 task clean(type: Delete) {
